<resources>
    <string name = "app_name">dp</string>
    <string name = "title_home">Home</string>
    <string name = "title_schedule">Schedule</string>
    <string name = "title_profile">Profile</string>
    <string name = "title_activity_load">DP</string>
    <string name = "initialization_text">Инициализация…</string>
    <string name = "title_auth">Auth</string>
    <string name = "title_group">Group</string>
    <string name = "title_user_info">UserInfo</string>
    <string name = "title_user_absence">UserAbsence</string>
    <string name = "title_subject">Subject</string>
    <string name = "title_group_list">GroupList</string>
    <string name = "title_create_group">CreateGroup</string>
    <string name = "title_lessons_info">CreateGroup</string>
    <string name = "title_sign_up">SignUp</string>
    <string name = "title_sign_in">SignIn</string>
    <string name = "error_corrupted_data">Data is corrupted or outdated</string>
    <string name = "error_no_data">No data found</string>
    <string name = "error_unknown">Something went wrong</string>
    <string name = "login_title">Имя</string>
    <string name = "login_hint">Введите имя</string>
    <string name = "password_title">Пароль</string>
    <string name = "password_hint">Введите пароль</string>
    <string name = "confirm_button_text">Продолжить</string>
    <string name = "sign_out_button_text">Выйти</string>
    <string name = "sign_in_button_text">Войти</string>
    <string name = "sign_up_button_text">Зарегистрироваться</string>
    <string name = "delete_button_text">Удалить аккаунт</string>
    <string name = "error_incorrect_password">Неверный пароль</string>
    <string name = "error_creating_group">Не удалось создать группу</string>
    <string name = "error_incorrect_login_data">Неверный логин или пароль</string>
    <string name = "error_user_exists">Пользователь с данным именем уже существует</string>
    <string name = "choice_admin_text">Преподаватель</string>
    <string name = "choice_user_text">Студент</string>
    <string name = "profile_screen_title">Профиль</string>
    <string name = "absence_count_title">Количество пропусков (ч.)</string>
    <string name = "user_name_title">Имя</string>
    <string name = "user_status_title">Статус</string>
    <string name = "user_group_title">Группа</string>
    <string name = "group_admin_name_title">Имя администратора</string>
    <string name = "group_members_title">Участники</string>
    <string name = "group_join_button_text">Вступить</string>
    <string name = "group_invite_button_text">Пригласить пользователя</string>
    <string name = "group_password_hint">Введите пароль</string>
    <string name = "no_absence_found_text">У данного пользователя не было пропущено ни одно занятие в текущем семестре.</string>
    <string name = "subject_date_title">Дата и время события</string>
    <string name = "subject_members_title">Участники</string>
    <string name = "group_create_button_text">Создать группу</string>
    <string name = "no_schedule_text">Занятия в текущий день отсутствуют</string>
    <string name = "no_subject_text">занятие отсутствует</string>
    <string name = "schedule_no_group_text">Для просмотра расписания вы должны быть участником группы</string>
    <string name = "absence_statistic_text">Статистика пропусков</string>
    <string name = "student_text">Студент:</string>
    <string name = "save_changes_button_text">Сохранить изменения</string>

    <string name="group_name_title">Название группы</string>
    <string name="group_password_title">Пароль</string>
    <string name="group_name_title_hint">Введите название группы</string>
    <string name="group_password_title_hint">Введите пароль</string>
    <string name="create_title">Создать</string>
    <string name="save_title">Сохранить</string>
    <string name="upper_week_title">Верхняя неделя</string>
    <string name="down_week_title">Нижняя неделя</string>
    <string name="week_day_monday">Понедельник</string>
    <string name="week_day_tuesday">Вторник</string>
    <string name="week_day_wednesday">Среда</string>
    <string name="week_day_thursday">Четверг</string>
    <string name="week_day_friday">Пятница</string>
    <string name="week_day_saturday">Суббота</string>
    <string name="week_day_sunday">Воскресенье</string>

    <string name = "lessons_info_text">Заполнение данных</string>
    <string name="lesson_type">Тип пары</string>
    <string name="lesson_type_lecture">Лекция</string>
    <string name="lesson_type_practice">Практика</string>
    <string name="lesson_type_lab">Лабораторная</string>
    <string name="lesson_teacher">Преподаватель</string>
    <string name="lesson_title">Предмет</string>
    <string name="lesson_1">Пара 1</string>
    <string name="lesson_2">Пара 2</string>
    <string name="lesson_3">Пара 3</string>
    <string name="lesson_4">Пара 4</string>
    <string name="lesson_5">Пара 5</string>

</resources>