<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:layout_marginHorizontal = "16dp"
    tools:context = ".ui.profile.ProfileFragment">

    <TextView
        android:id = "@+id/title"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginTop = "16dp"
        android:text = "@string/group_create_button_text"
        android:textColor = "@color/black"
        android:textSize = "22sp"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toTopOf = "parent" />

    <ImageView
        android:id = "@+id/btn_back"
        android:layout_width = "32dp"
        android:layout_height = "32dp"
        android:layout_marginTop = "16dp"
        android:src = "@drawable/ic_back"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toTopOf = "parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width = "0dp"
        android:layout_height = "0dp"
        android:layout_marginVertical = "16dp"
        app:layout_constraintBottom_toTopOf = "@id/btn_create"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id = "@+id/constraintLayoutInitialCompanySelection"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content">

            <TextView
                android:id = "@+id/group_name_title"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_marginTop = "16dp"
                android:text = "@string/group_name_title"
                app:layout_constraintStart_toStartOf = "parent"
                app:layout_constraintTop_toTopOf = "parent"
                app:layout_constraintVertical_chainStyle = "packed" />

            <EditText
                android:id = "@+id/group_name_input"
                android:layout_width = "match_parent"
                android:layout_height = "50dp"
                android:hint = "@string/group_name_title_hint"
                android:maxLines = "1"
                android:textSize = "16sp"
                app:layout_constraintTop_toBottomOf = "@+id/group_name_title" />

            <TextView
                android:id = "@+id/group_password_title"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_marginTop = "16dp"
                android:text = "@string/group_password_title"
                app:layout_constraintStart_toStartOf = "parent"
                app:layout_constraintTop_toBottomOf = "@+id/group_name_input" />

            <EditText
                android:id = "@+id/group_password_input"
                android:layout_width = "match_parent"
                android:layout_height = "50dp"
                android:hint = "@string/group_password_title_hint"
                android:maxLines = "1"
                android:textSize = "16sp"
                app:layout_constraintStart_toStartOf = "parent"
                app:layout_constraintTop_toBottomOf = "@+id/group_password_title" />

            <TextView
                android:id = "@+id/upper_week_title"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_marginTop = "16dp"
                android:text = "@string/upper_week_title"
                android:textColor = "@color/black"
                android:textSize = "24sp"
                android:textStyle = "bold"
                app:layout_constraintStart_toStartOf = "parent"
                app:layout_constraintTop_toBottomOf = "@+id/group_password_input"
                app:layout_constraintVertical_chainStyle = "packed" />

            <TextView
                android:id = "@+id/upper_week_monday"
                android:layout_width = "0dp"
                android:layout_height = "40dp"
                android:gravity = "center_vertical"
                android:text = "@string/week_day_monday"
                android:textSize = "18sp"
                app:drawableEndCompat = "@drawable/ic_arrow_right"
                app:layout_constraintEnd_toEndOf = "parent"
                app:layout_constraintStart_toStartOf = "parent"
                app:layout_constraintTop_toBottomOf = "@id/upper_week_title" />

            <TextView
                android:id = "@+id/upper_week_tuesday"
                android:layout_width = "0dp"
                android:layout_height = "40dp"
                android:gravity = "center_vertical"
                android:text = "@string/week_day_tuesday"
                android:textSize = "18sp"
                app:drawableEndCompat = "@drawable/ic_arrow_right"
                app:layout_constraintEnd_toEndOf = "parent"
                app:layout_constraintStart_toStartOf = "parent"
                app:layout_constraintTop_toBottomOf = "@id/upper_week_monday" />

            <TextView
                android:id = "@+id/upper_week_wednesday"
                android:layout_width = "0dp"
                android:layout_height = "40dp"
                android:gravity = "center_vertical"
                android:text = "@string/week_day_wednesday"
                android:textSize = "18sp"
                app:drawableEndCompat = "@drawable/ic_arrow_right"
                app:layout_constraintEnd_toEndOf = "parent"
                app:layout_constraintStart_toStartOf = "parent"
                app:layout_constraintTop_toBottomOf = "@id/upper_week_tuesday" />

            <TextView
                android:id = "@+id/upper_week_thursday"
                android:layout_width = "0dp"
                android:layout_height = "40dp"
                android:gravity = "center_vertical"
                android:text = "@string/week_day_thursday"
                android:textSize = "18sp"
                app:drawableEndCompat = "@drawable/ic_arrow_right"
                app:layout_constraintEnd_toEndOf = "parent"
                app:layout_constraintStart_toStartOf = "parent"
                app:layout_constraintTop_toBottomOf = "@id/upper_week_wednesday" />

            <TextView
                android:id = "@+id/upper_week_friday"
                android:layout_width = "0dp"
                android:layout_height = "40dp"
                android:gravity = "center_vertical"
                android:text = "@string/week_day_friday"
                android:textSize = "18sp"
                app:drawableEndCompat = "@drawable/ic_arrow_right"
                app:layout_constraintEnd_toEndOf = "parent"
                app:layout_constraintStart_toStartOf = "parent"
                app:layout_constraintTop_toBottomOf = "@id/upper_week_thursday" />

            <TextView
                android:id = "@+id/upper_week_saturday"
                android:layout_width = "0dp"
                android:layout_height = "40dp"
                android:gravity = "center_vertical"
                android:text = "@string/week_day_saturday"
                android:textSize = "18sp"
                app:drawableEndCompat = "@drawable/ic_arrow_right"
                app:layout_constraintEnd_toEndOf = "parent"
                app:layout_constraintStart_toStartOf = "parent"
                app:layout_constraintTop_toBottomOf = "@id/upper_week_friday" />

            <TextView
                android:id = "@+id/upper_week_sunday"
                android:layout_width = "0dp"
                android:layout_height = "40dp"
                android:gravity = "center_vertical"
                android:text = "@string/week_day_sunday"
                android:textSize = "18sp"
                app:drawableEndCompat = "@drawable/ic_arrow_right"
                app:layout_constraintEnd_toEndOf = "parent"
                app:layout_constraintStart_toStartOf = "parent"
                app:layout_constraintTop_toBottomOf = "@id/upper_week_saturday" />


            <TextView
                android:id = "@+id/down_week_title"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_marginTop = "16dp"
                android:text = "@string/down_week_title"
                android:textColor = "@color/black"
                android:textSize = "24sp"
                android:textStyle = "bold"
                app:layout_constraintStart_toStartOf = "parent"
                app:layout_constraintTop_toBottomOf = "@+id/upper_week_sunday"
                app:layout_constraintVertical_chainStyle = "packed"
                app:layout_goneMarginTop = "20dp" />

            <TextView
                android:id = "@+id/down_week_monday"
                android:layout_width = "0dp"
                android:layout_height = "40dp"
                android:gravity = "center_vertical"
                android:text = "@string/week_day_monday"
                android:textSize = "18sp"
                app:drawableEndCompat = "@drawable/ic_arrow_right"
                app:layout_constraintEnd_toEndOf = "parent"
                app:layout_constraintStart_toStartOf = "parent"
                app:layout_constraintTop_toBottomOf = "@id/down_week_title" />

            <TextView
                android:id = "@+id/down_week_tuesday"
                android:layout_width = "0dp"
                android:layout_height = "40dp"
                android:gravity = "center_vertical"
                android:text = "@string/week_day_tuesday"
                android:textSize = "18sp"
                app:drawableEndCompat = "@drawable/ic_arrow_right"
                app:layout_constraintEnd_toEndOf = "parent"
                app:layout_constraintStart_toStartOf = "parent"
                app:layout_constraintTop_toBottomOf = "@id/down_week_monday" />

            <TextView
                android:id = "@+id/down_week_wednesday"
                android:layout_width = "0dp"
                android:layout_height = "40dp"
                android:gravity = "center_vertical"
                android:text = "@string/week_day_wednesday"
                android:textSize = "18sp"
                app:drawableEndCompat = "@drawable/ic_arrow_right"
                app:layout_constraintEnd_toEndOf = "parent"
                app:layout_constraintStart_toStartOf = "parent"
                app:layout_constraintTop_toBottomOf = "@id/down_week_tuesday" />

            <TextView
                android:id = "@+id/down_week_thursday"
                android:layout_width = "0dp"
                android:layout_height = "40dp"
                android:gravity = "center_vertical"
                android:text = "@string/week_day_thursday"
                android:textSize = "18sp"
                app:drawableEndCompat = "@drawable/ic_arrow_right"
                app:layout_constraintEnd_toEndOf = "parent"
                app:layout_constraintStart_toStartOf = "parent"
                app:layout_constraintTop_toBottomOf = "@id/down_week_wednesday" />

            <TextView
                android:id = "@+id/down_week_friday"
                android:layout_width = "0dp"
                android:layout_height = "40dp"
                android:gravity = "center_vertical"
                android:text = "@string/week_day_friday"
                android:textSize = "18sp"
                app:drawableEndCompat = "@drawable/ic_arrow_right"
                app:layout_constraintEnd_toEndOf = "parent"
                app:layout_constraintStart_toStartOf = "parent"
                app:layout_constraintTop_toBottomOf = "@id/down_week_thursday" />

            <TextView
                android:id = "@+id/down_week_saturday"
                android:layout_width = "0dp"
                android:layout_height = "40dp"
                android:gravity = "center_vertical"
                android:text = "@string/week_day_saturday"
                android:textSize = "18sp"
                app:drawableEndCompat = "@drawable/ic_arrow_right"
                app:layout_constraintEnd_toEndOf = "parent"
                app:layout_constraintStart_toStartOf = "parent"
                app:layout_constraintTop_toBottomOf = "@id/down_week_friday" />

            <TextView
                android:id = "@+id/down_week_sunday"
                android:layout_width = "0dp"
                android:layout_height = "40dp"
                android:gravity = "center_vertical"
                android:text = "@string/week_day_sunday"
                android:textSize = "18sp"
                app:drawableEndCompat = "@drawable/ic_arrow_right"
                app:layout_constraintEnd_toEndOf = "parent"
                app:layout_constraintStart_toStartOf = "parent"
                app:layout_constraintTop_toBottomOf = "@id/down_week_saturday" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id = "@+id/btn_create"
        style = "@style/BasePrimaryButton"
        android:layout_width = "match_parent"
        android:layout_height = "50dp"
        android:layout_marginTop = "16dp"
        android:layout_marginBottom = "16dp"
        android:text = "@string/create_title"
        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent" />

</androidx.constraintlayout.widget.ConstraintLayout>